using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant 
{

    public const string TAG_PLAYER = "Player";
    public const string TAG_PLAYER_CLONE = "PlayerClone";

    public const string ANIM_WALK_UP = "walk_up";
    public const string ANIM_WALK_DOWN = "walk_down";
    public const string ANIM_WALK_SIDE = "walk_side";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_HIT = "hit";


}
